# naver_delivery_register

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/schemas/: schemas.py
app/services/: delivery_service.py
app/utils/: driver.py  utils.py
