[tool.poetry]
name = "naver-delivery-register"
version = "0.1.0"
description = "FastAPI 기반 네이버 스마트스토어 택배사 등록 자동화 서비스"
authors = ["Goss <goss1997@naver.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.0.3"
selenium = "^4.19.0"
undetected-chromedriver = "^3.5.5"
setuptools = "^69.5.1"
user-agents = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
